--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,29 @@
 spring.application.name=bookstoremanager
 spring.profiles.active=dev
+
+springdoc.show-actuator=true
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=loggers
+
+management.endpoints.web.base-path=/actuator
+
+management.endpoint.health.show-details=always
+
+management.endpoint.shutdown.enabled=true
+
+info.app.name=@project.name@
+info.app.groupId=@project.groupId@
+info.app.artifactId=@project.artifactId@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+
+management.info.git.mode=full
+
+management.info.build.enabled=true
+management.info.env.enabled=true
+
+
+
+
